
  Inbound connections logged as soon as the remote host address is known
  when running under tcpserver.

  check_earlytalker -
    + optionally react to an earlytalker by denying all MAIL-FROM commands
      rather than issuing a 4xx/5xx greeting and disconnecting. (Mark
      Powell)
    + initial "awkward silence" period now configurable (Mark Powell)
    + DENY/DENYSOFT now configurable

0.28 - 2004/06/05

  Don't keep adding ip addresses to the process status line ($0) when running under PPerl.

  Include the date and time the session started in the process status line.

  Added a "queue/maildir" plugin for writing incoming mails to a maildir.

  Create temp files with permissions 0600 (thanks to Robert James Kaes again)

  Fix warning in check_badrcptto plugin (Thanks to Robert James Kaes)

  Proper "Log levels" with a configuration option

  $Include feature in config/plugins


0.27.1 - 2004/03/11

  SpamAssassin plugin Outlook compatibility fix (Thanks to Gergely Risko)


0.27 - 2004/03/10

  Support for unix sockets in the spamassassin plugin (requires SA
  2.60 or higher).  Thanks to John Peacock!

  Modified the dnsbl plugin to better support both A and TXT records and 
  support all of the RBLSMTPD functionality. (Thanks to Mark Powell)

  reject bare carriage-returns in addition to the  bare line-feeds
  (based on a patch from Robert James Kaes, thanks!)

  Bugfix to the count_unrecognized_commands plugin so it works
  under PPerl (it wasn't resetting the count properly).

  reset_transaction is called after disconnect plugins are called so
  the Transaction objects DESTROY method is called. (Thanks to Robert
  James Kaes <rjkaes@flarenet.com>)

  Made the SpamAssassin plugin work with SA 2.6+ (thanks to numerous
  contributors, thanks everyone!). Note that for now it's not
  including the Spam: headers with the score explained. For that use
  the spamassassin_spamc plugin from http://projects.bluefeet.net/
  (for now).
